# sqlite-vec

./: .gitignore
bindings/android/: IMPLEMENTATION_SUMMARY.md  README.md  build.gradle  build.gradle.kts  build.sh  consumer-rules.pro  gradle.properties  gradlew  gradlew.bat  local.properties  proguard-rules.pro  settings.gradle.kts  test-summary.md  verify.sh
bindings/android/src/androidTest/java/com/sqlite/vec/: SQLiteVecJavaInstrumentedTest.java
bindings/android/src/androidTest/kotlin/com/sqlite/vec/: SQLiteDatabaseExtensionsTest.kt  SQLiteVecInstrumentedTest.kt  SQLiteVecUtilsInstrumentedTest.kt  SwiftCompatibilityTest.kt
bindings/android/src/main/: AndroidManifest.xml
bindings/android/src/main/cpp/: CMakeLists.txt  sqlite-vec-jni.c  sqlite-vec-jni.cpp  sqlite-vec.c
bindings/android/src/main/java/com/sqlite/vec/: SQLiteVec.java  SQLiteVecJava.java  VectorOperations.java  VectorTable.java
bindings/android/src/main/kotlin/com/sqlite/vec/: SQLiteDatabaseExtensions.kt  SQLiteVec.kt  SQLiteVecOpenHelper.kt  SQLiteVecUtils.kt
bindings/android/src/test/java/com/sqlite/vec/: APIStructureTest.java  SQLiteVecJavaUnitTest.java  SQLiteVecTest.java  SimpleAPITest.java
bindings/android/src/test/kotlin/com/sqlite/vec/: SQLiteVecUnitTest.kt
bindings/swift/: Makefile  Package.resolved  Package.swift  README.md
bindings/swift/.swiftpm/xcode/xcuserdata/lakshman_peethani.xcuserdatad/xcschemes/: xcschememanagement.plist
bindings/swift/Examples/: SimpleDemo.swift  TextEmbeddingExample.swift
bindings/swift/Examples/BasicUsage/: Package.swift
bindings/swift/Examples/iOSExample/: Package.swift  README.md  main.swift
bindings/swift/Examples/iOSExample/Sources/iOSExample/: main.swift
bindings/swift/Sources/CSQLiteVec/: sqlite-vec.c
bindings/swift/Sources/CSQLiteVec/include/: module.modulemap
bindings/swift/Sources/SQLiteVec/: SQLiteVec.swift
bindings/swift/Tests/SQLiteVecTests/: SQLiteVecTests.swift
(+1 files in other folders)
